# foobar2000-obs

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  script.nsi
data/locale/: en-US.ini
src/: foobar2000-source.cpp  foobar2000-source.h  plugin-main.c
src/foobar2000-bridge/: CMakeLists.txt  foo_obsbridge.cpp
